WMIT-20 Implement use case: ChooseCalendar  - complete functionality implementation  - changed start Activity to Choose Calendar for demonstration

--- a/app/src/main/res/layout/activity_choose_calendar.xml
+++ b/app/src/main/res/layout/activity_choose_calendar.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.wakemeintime.dffc.wakemeintime.ChooseCalendarActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/choose_calendar_heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/myCalendars" />
+
+    <ListView
+        android:id="@+id/myCalendarsListView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"></ListView>
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
