--- a/app/src/main/res/layout/activity_choose_calendar.xml
+++ b/app/src/main/res/layout/activity_choose_calendar.xml
@@ -14,7 +14,7 @@
         android:id="@+id/myCalendarsListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"></ListView>
+        android:scrollbars="vertical" />
 
 
 </LinearLayout>
