--- a/app/src/main/res/layout/activity_get_overview.xml
+++ b/app/src/main/res/layout/activity_get_overview.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.wakemeintime.dffc.wakemeintime.GetOverviewActivity">
+    tools:context="com.wakemeintime.dffc.wakemeintime.activities.GetOverviewActivity">
 
 </android.support.constraint.ConstraintLayout>
