--- a/app/src/main/res/layout/choose_calendar_listview_item.xml
+++ b/app/src/main/res/layout/choose_calendar_listview_item.xml
@@ -4,7 +4,7 @@
 
     <CheckBox
         android:id="@+id/calendarCheckBox"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/calendarName" />
