--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -3,18 +3,28 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="com.wakemeintime.dffc.wakemeintime.SettingsActivity$MorningRoutinePreferenceFragment"
+        android:fragment="com.wakemeintime.dffc.wakemeintime.activities.SettingsActivity$GeneralPreferenceFragment"
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="@string/pref_header_general" />
+
+    <header
+        android:fragment="com.wakemeintime.dffc.wakemeintime.activities.SettingsActivity$MorningRoutinePreferenceFragment"
         android:icon="@drawable/ic_info_black_24dp"
         android:title="@string/pref_header_morningroutine" />
 
     <header
-        android:fragment="com.wakemeintime.dffc.wakemeintime.SettingsActivity$AlarmPreferenceFragment"
+        android:fragment="com.wakemeintime.dffc.wakemeintime.activities.SettingsActivity$AlarmPreferenceFragment"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_alarms" />
 
     <header
-        android:fragment="com.wakemeintime.dffc.wakemeintime.SettingsActivity$TransportationPreferenceFragment"
+        android:fragment="com.wakemeintime.dffc.wakemeintime.activities.SettingsActivity$TransportationPreferenceFragment"
         android:icon="@drawable/ic_sync_black_24dp"
         android:title="@string/pref_header_transportation" />
+    <header
+        android:fragment="com.wakemeintime.dffc.wakemeintime.activities.SettingsActivity$NotificationPreferenceFragment"
+        android:icon="@drawable/ic_sync_black_24dp"
+        android:title="@string/pref_header_notification" />
+
 
 </preference-headers>
